--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class="light-blue lighten-1" role="navigation">
+<nav class="purple lighten-1" role="navigation">
   <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="#">Navbar Link</a></li>
@@ -13,12 +13,12 @@
 <div class="section no-pad-bot" id="index-banner">
   <div class="container">
     <br><br>
-    <h1 class="header center orange-text">Starter Template</h1>
+    <h1 class="header center purple-text">Starter Template</h1>
     <div class="row center">
       <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
     </div>
     <div class="row center">
-      <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+      <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal darken-1">Get Started</a>
     </div>
     <br><br>
 
@@ -70,7 +70,7 @@
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
 
-<footer class="page-footer orange">
+<footer class="page-footer purple lighten-1">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -101,7 +101,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-    Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+    Made by <a class="purple-text text-lighten-3" href="http://materializecss.com">Materialize</a>
     </div>
   </div>
 </footer>
