Updated color scheme

--- a/app/templates/admin/posts/index.hbs
+++ b/app/templates/admin/posts/index.hbs
@@ -3,5 +3,5 @@
 {{/md-collection}}
 
 <div class="right-align">
-    {{#link-to "admin.posts.new" class="btn-floating btn-large waves-effect waves-light lime darken-1"}}<i class="mdi-content-add">add</i>{{/link-to}}
+    {{#link-to "admin.posts.new" class="btn-floating btn-large waves-effect waves-light deep-purple accent-2"}}<i class="mdi-content-add">add</i>{{/link-to}}
 </div>
