--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class="purple lighten-1" role="navigation">
+<nav class="teal" role="navigation">
     <div class="nav-wrapper container">{{#link-to "index" id="logo-container" class="brand-logo"}}Gonnatakeyouthere{{/link-to}}
         <ul class="right">
             <li>{{#link-to 'admin'}}Admin{{/link-to}}</li>
@@ -67,7 +67,7 @@
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
 
-<footer class="page-footer purple lighten-1">
+<footer class="page-footer teal">
 {{!--
   <div class="container">
     <div class="row">
