--- a/app/templates/components/admin-edit-post.hbs
+++ b/app/templates/components/admin-edit-post.hbs
@@ -13,5 +13,5 @@
         {{md-btn text="Delete"action="delete" class="red"}}
     {{/unless}}
     {{md-btn text="Cancel"action="cancel" class="grey darken-4"}}
-    {{md-btn text="Save"action="save" class="green darken-2"}}
+    {{md-btn text="Save"action="save" class="deep-purple accent-2"}}
 </div>
