--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,12 @@
 @import 'materialize';
 @import 'ember-cli-materialize';
+
+.user-profile-image {
+    img {
+        height: 55px;
+        width: 55px;
+        border-radius: 50%;
+        margin-top: 4px;
+        cursor: pointer;
+    }
+}
