--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,11 @@
 <nav class="teal" role="navigation">
     <div class="nav-wrapper container">{{#link-to "index" id="logo-container" class="brand-logo"}}Gonnatakeyouthere{{/link-to}}
         <ul class="right">
-            <li>{{#link-to 'admin'}}Admin{{/link-to}}</li>
+            {{#if session.currentUser}}
+                {{user-profile-image user=session.currentUser signOut="signOut"}}
+            {{else}}
+                <li>{{#link-to 'login'}}Sign in{{/link-to}}</li>
+            {{/if}}
         </ul>
     </div>
 </nav>
