--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,3 +1,19 @@
-{{admin-nav-tabs}}
+<nav class="teal" role="navigation">
+    <div class="nav-wrapper container">{{#link-to "index" id="logo-container" class="brand-logo"}}Gonnatakeyouthere{{/link-to}}
+        <ul class="right">
+            {{#if session.currentUser}}
+                {{user-profile-image user=session.currentUser signOut="signOut"}}
+            {{else}}
+                <li>{{#link-to "login"}}Sign in{{/link-to}}</li>
+            {{/if}}
+        </ul>
+    </div>
+</nav>
 
-{{outlet}}
+<div class="container">
+  <div class="section">
+      {{admin-nav-tabs}}
+
+      {{outlet}}
+  </div>
+</div>
