--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,3 +10,32 @@
         cursor: pointer;
     }
 }
+
+.firepad {
+    min-height: 300px;
+    .powered-by-firepad {
+        display: none;
+    }
+}
+
+html {
+    @extend .blue-grey-text, .text-darken-3
+}
+
+p {
+    margin-top: 0;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+@media screen and (max-width: 500px) {
+    nav  {
+        height: 50px;
+        line-height: 50px;
+        .brand-logo {
+            font-size: 1.5rem;
+        }
+    }
+}
