--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,8 @@
 
 .firepad {
     min-height: 300px;
+    border: solid 1px #78909c;
+    margin-bottom: 15px;
     .powered-by-firepad {
         display: none;
     }
