--- a/app/templates/components/admin-nav-tabs.hbs
+++ b/app/templates/components/admin-nav-tabs.hbs
@@ -1,6 +1,1 @@
-<div class="col s12">
-    <ul class="tabs z-depth-1">
-        <li class="tab col s3">{{#link-to 'admin.posts'}}Posts{{/link-to}}</li>
-        <li class="tab col s3">{{#link-to 'admin.attachments'}}Attachments{{/link-to}}</li>
-    </ul>
-</div>
+{{md-tabs content=tabs selected=selectedTab class="z-depth-1"}}
